# QnA_with_Django

./: .gitignore  README.md  manage.py  pyproject.toml
api/: urls.py
api/comments/: filters.py  serializers.py  tests.py  views.py
api/likes/: views.py
api/questions/: serializers.py  tests.py  views.py
api/user/: serializers.py  views.py
like/: admin.py  models.py
like/migrations/: 0001_initial.py
qna_rewind/: asgi.py  settings.py  urls.py  wsgi.py
question/: admin.py  models.py
question/migrations/: 0001_initial.py  0002_alter_question_options.py  0003_comment.py  0004_alter_comment_options_alter_question_options.py  0005_like.py  0006_delete_like.py
user/migrations/: 0001_initial.py
